cloudflared-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cloudflared
  namespace: debugging-ollama
spec:
  containers:
  - name: cloudflared
    image: cloudflare/cloudflared:2026.3.0
    command: ["cloudflared", "tunnel", "--no-autoupdate", "run", "--url", "tcp://10.0.0.8:22"]
    ports:
    - containerPort: 22
      name: ssh
