deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "12"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"funasr"},"name":"funasr","namespace":"debugging-testcrash-pub"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"funasr"}},"template":{"metadata":{"labels":{"app":"funasr"}},"spec":{"containers":[{"env":[{"name":"FUNASR_MODEL","value":"Fun-ASR-MLT-Nano"},{"name":"FUNASR_DEVICE","value":"cpu"}],"image":"harbor.dev.takatan.cloud/azazellosaraksh/funasr:latest","imagePullPolicy":"Always","name":"fun [...]
  creationTimestamp: "2026-05-25T17:12:56Z"
  generation: 22
  labels:
    app: funasr
  name: funasr
  namespace: debugging-testcrash-pub
  resourceVersion: "275684758"
  uid: aeedeeeb-79ff-4456-a0bb-054db6bd6742
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: funasr
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2026-05-30T08:53:54+07:00"
      labels:
        app: funasr
    spec:
      containers:
      - env:
        - name: FUNASR_MODEL
          value: iic/FunASR-MLT-Nano

        - name: FUNASR_MODEL_PATH
          value: /models
        - name: FUNASR_DEVICE
          value: cpu
        image: harbor.dev.takatan.cloud/azazellosaraksh/funasr:latest
        imagePullPolicy: Always
        name: funasr-api
        ports:
        - containerPort: 50001
          protocol: TCP
        resources:
          limits:
            cpu: "1"
            memory: 8Gi
          requests:
            cpu: 100m
            memory: 1Gi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /models
          name: model-storage
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      imagePullSecrets:
      - name: harbor-pull-secret
      volumes:
      - name: model-storage
        persistentVolumeClaim:
          claimName: funasr-model-pvc


status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2026-05-30T06:50:35Z"
    lastUpdateTime: "2026-05-30T06:50:35Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2026-05-30T07:00:36Z"
    lastUpdateTime: "2026-05-30T07:00:36Z"
    message: ReplicaSet "funasr-78f7dc8f4d" has timed out progressing.
    reason: ProgressDeadlineExceeded
    status: "False"
    type: Progressing
  observedGeneration: 22
  readyReplicas: 1
  replicas: 2
  terminatingReplicas: 0
  unavailableReplicas: 1
  updatedReplicas: 1
