mtproto-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mtproto-bridge-manager
  namespace: debugging-testcrash-cloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mtproto-bridge-manager
  template:
    metadata:
      labels:
        app: mtproto-bridge-manager
    spec:
      serviceAccountName: mtproto-bridge-sa
      containers:
      - name: mtproto-bridge
        image: azazellosaraksh/debugging-mtproto-bridge:v2
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "1000m"
            memory: "2Gi"
          limits:
            cpu: "2000m"
            memory: "4Gi"
