ollama-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ollama
  namespace: debugging-llm-proj
  labels:
    run: ollama
spec:
  containers:
  - name: ollama
    image: ollama/ollama:latest
    ports:
    - containerPort: 11434
      name: http
    volumeMounts:
    - name: models
      mountPath: /root/.ollama
    resources:
      limits:
        memory: 24Gi
      requests:
        memory: 16Gi
  volumes:
  - name: models
    persistentVolumeClaim:
      claimName: vm-ollama-root
