ollama-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama-lb
  namespace: debugging-ollama
spec:
  type: LoadBalancer
  selector:
    app: ollama
  ports:
  - port: 11434
    targetPort: 11434
    name: http
