ollama-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama
  namespace: debugging-ollama
  annotations:
    kube-dc.com/eip: "91.224.11.30"
spec:
  type: LoadBalancer
  selector:
    app: ollama
  ports:
  - port: 11434
    targetPort: 11434
    name: http
