proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-frontend-proxy
  namespace: debugging-testcrash-pub
spec:
  type: ExternalName
  externalName: echo-frontend.debugging-voicemsg.svc.cluster.local
  ports:
  - port: 80
