frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-frontend
  namespace: debugging-echovoice
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: voicemsg.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echo-frontend
            port:
              number: 80
